# diskusage-rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/db/: execute_queries.rs
src/filesystem/: fetch.rs
src/lib/db/: execute_queries.rs  mod.rs
src/models/: init_db.rs
