[package]
name = "diskusage"
version = "0.1.0"
edition = "2021"

[dependencies]
# tokio (no TLS)
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "macros" ] }
tokio = { version = "1", features = ["full"] }
polars = "0.32"
connectorx = { version = "0.3", features = ["src_postgres", "dst_arrow2"] }
log = "0.4"
env_logger = "0.11"