[package]
name = "diskusage"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "init_db"
path = "src/bin/init_db/main.rs"

[[bin]]
name = "diskusage"
path = "src/bin/diskusage/main.rs"

[[bin]]
name = "estimate"
path = "src/bin/estimate/main.rs"

[lib]
name = "db"
path = "src/lib/db/mod.rs"

[dependencies]
# tokio (no TLS)
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "chrono", "bigdecimal"] }
tokio = { version = "1", features = ["full"] }
polars = { version = "0.32", features = ["rows"] }  # downgraded for compatibility with connectorx
connectorx = { version = "0.3", features = ["src_postgres", "dst_arrow2"] }
log = "0.4"
env_logger = "0.11"
users = "0.11"
walkdir = "2"
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
bigdecimal = "0.4"
dashmap = "5.5"
comfy-table = "7.1"
